@@ -1,3 +1,5 @@
+  - dateline is reformatted differently. The time component is no longer default to 23:59:59
+
 v0.36.0 2020-08-07T08:56:18+0800
   - Add a site-specific extractor for www.eventsinfocus.org
   - Add a site-specific extractor for m.news.cctv.com
